# progTechScieSim_solutions

./: README.md
ex0/: recursionAndLoop.cpp
ex00/: mergeSort.cpp  mergesort.out
ex01/: epsilon  machineEpsilon.cpp  simpson.cpp
ex02/arrays/: static
ex02/simpson/: main.cpp  print_integrals
ex03/epsilon/: epsilon.cpp
ex04/: z2_group_skeleton.cpp
ex06/randomAndTimerLibs/benchmark/: main.cpp
ex06/randomAndTimerLibs/random/: CMakeCache.txt  random.cpp
ex06/randomAndTimerLibs/timer/: cmake_install.cmake  timer.hpp
ex07/benchmarking_containers/: CMakeLists.txt  containers.cpp
ex07/benchmarking_containers/timer/: CMakeLists.txt  timer.cpp  timer.hpp
ex07/iterators/: main.cpp  main.hpp  my_iterator.hpp
ex09/cache_effects/: CMakeLists.txt  cache.cpp
ex1/: simpson  simpson.cpp
ex11/factorial_compiletime.cpp/: main  main.cpp
ex12/python/src/: hello.py  main.py
ex12/python/src/include/: world.py
ex13/LinAlgPython/: harmonic_chain.py
ex13/plotting/: plot_skeleton.py
ex2/arrays/: dynamic  dynamic.cpp  static.cpp
ex2/simpson/: Makefile
ex2/simpson/integrator/: Makefile  simpson.cpp  simpson.hpp
ex3/epsilon/: CMakeLists.txt
ex4/: CMakeLists.txt  z2_group_skeleton.cpp
ex4/simpson/: CMakeLists.txt  main.cpp
ex5/simpson_multidimensional/: main  main.cpp  simpson.hpp
ex6/randomAndTimerLibs/random/: CMakeLists.txt  Makefile  cmake_install.cmake  random.hpp
ex6/randomAndTimerLibs/timer/: CMakeCache.txt  CMakeLists.txt  Makefile  timer.cpp
ex7/benchmarking_containers/timer/: Makefile  cmake_install.cmake
ex7/iterators/: CMakeLists.txt  sarray.hpp
ex9/cache_effects/: Makefile  plot.py
